fix: Join us section mobile

--- a/src/components/molecules/JoinUs/styles.scss
+++ b/src/components/molecules/JoinUs/styles.scss
@@ -16,14 +16,15 @@
   > &-text {
     @include text-h4;
 
-    @include tablet {
-      font-weight: 600;
-    }
-
     font-family: "IBM Plex Sans", sans-serif;
-    max-width: 408px;
+    max-width: 292px;
     text-align: center;
     margin-bottom: 32px;
+
+    @include tablet {
+      font-weight: 600;
+      max-width: 408px;
+    }
 
     > span {
       font-family: inherit;
